--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
 MONGODB_URI=mongodb://localhost:27017/PomDu
+REACT_APP=http://localhost:3000
+
+# MONGODB_URI=mongodb://localhost:27017/database
+JWT_SECRET=pomduadmin
+# EMAIL_USER=nguyentruongnhathao1922@gmail.com
+EMAIL_USER=minhphancailay@gmail.com
+# EMAIL_PASS=idba bulh uszl vflp
+EMAIL_PASS=Ttrieuvan1412.
+# ADMIN_SECRET=ngtrnhaoadmin
+ADMIN_SECRET=pomduadmin
+# PORT=5001
+PORT=7070
+PAYPAL_CLIENT_ID=AXxH01Mm_rKQa5g3kcI38T2CqBJPng9Or7-NWfHlywW5IDHSYLJzMrcc_piremPSOzpZ4L4_Tj5AfSgT
+PAYPAL_CLIENT_SECRET=EAI_HMepqDdNpNGyjmwO8auI7LddN_Ti_Pva_jSPwbYJc0NkpGiMx2HSu80MFlxZQkWteHj6buG61Xlf
+PAYPAL_MODE=sandbox
