--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.15.1",
+    "qrcode.react": "^4.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-i18next": "^15.1.1",
