--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^6.28.0",
     "recharts": "^2.13.3",
     "slugify": "^1.6.6",
     "svg-to-pdfkit": "^0.1.8"
